# zero2prod_rust

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240809221216_create_subscriptions_table.sql  20240828025223_make_status_not_null_in_subscriptions.sql  20240828025454_create_subscription_tokens_table.sql  20240909035446_create_users_table.sql  20240923042144_seed_user.sql  20241006211710_create_idempotency_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  newsletter_form.html  post.rs
src/routes/admin/password/: get.rs  password_form.html  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login_form.html  post.rs
tests/api/: admin_change_password.rs  admin_dashboard.rs  admin_newsletters.rs  health_check.rs  helpers.rs  login.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
