[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4.9.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.86"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22.1"
chrono = "0.4.38"
config = "0.14.0"
email_address = "0.2.9"
htmlescape = "0.3.1"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.205", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "serde"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "cookies"]


[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.127"
wiremock = "0.6.1"



